tests/NormalTests/paczka1/fuzzy1/46286320.err
Error in line 7: xgP58v S151 -3,9
Error in line 10: lMOTE S615 96,0
Error in line 14: A249 S615 31,4
Error in line 17: oYCKdeNg S615 71,43
Error in line 16: WHYvF1iq3 S918 76,0
Error in line 12: lMOTE A249 48,8
Error in line 38: W=YvF1iq3 S151 60,6
Error in line 35: WHYvF1iq3 S151 36,1
